--- a/static/js/css/style.css
+++ b/static/js/css/style.css
@@ -3,7 +3,7 @@
 }
 
 .jumbo-bg {
-    background: url('../images/unsplash-elena-mozhvilo.png') no-repeat center;
+    background: url('../images/bacteria.jpg') no-repeat center;
     background-size: cover;
 }
 
